--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/pateldeep08/ProjectNodeJS#readme",
   "dependencies": {
+    "@types/express-ejs-layouts": "^2.3.2",
     "espress": "0.0.0"
   },
   "devDependencies": {
