--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
   "homepage": "https://github.com/pateldeep08/ProjectNodeJS#readme",
   "dependencies": {
     "@types/express-ejs-layouts": "^2.3.2",
-    "espress": "0.0.0"
+    "espress": "0.0.0",
+    "mongoose": "^5.8.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.2",
+    "@types/mongodb": "^3.3.13",
     "@types/node": "^12.12.21",
     "bcryptjs": "^2.4.3",
     "connect-flash": "^0.1.1",
