--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   },
   "homepage": "https://github.com/pateldeep08/ProjectNodeJS#readme",
   "dependencies": {
+    "@types/connect-flash": "0.0.35",
     "@types/express-ejs-layouts": "^2.3.2",
+    "ejs-lint": "^0.3.0",
     "espress": "0.0.0",
     "mongoose": "^5.8.2"
   },
