Once we are register. We can isert data in db but not visualisation is yet possible

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@types/connect-flash": "0.0.35",
     "@types/express-ejs-layouts": "^2.3.2",
+    "body-parser": "^1.19.0",
     "ejs-lint": "^0.3.0",
     "espress": "0.0.0",
     "mongoose": "^5.8.2"
