--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "body-parser": "^1.19.0",
     "ejs-lint": "^0.3.0",
     "espress": "0.0.0",
+    "jquery": "^3.4.1",
     "mongoose": "^5.8.2"
   },
   "devDependencies": {
