--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/server.js",
     "dev": "nodemon src/server.ts",
-    "build": "tsc -p ."
+    "build": "tsc -p .",
+    "test": "./node_modules/.bin/mocha -r ts-node/register src/**/*.test.ts"
   },
   "repository": {
     "type": "git",
@@ -24,21 +25,26 @@
     "@types/connect-flash": "0.0.35",
     "@types/express-ejs-layouts": "^2.3.2",
     "body-parser": "^1.19.0",
+    "chart.js": "^2.9.3",
     "ejs-lint": "^0.3.0",
     "espress": "0.0.0",
     "jquery": "^3.4.1",
     "mongoose": "^5.8.2"
   },
   "devDependencies": {
+    "@types/chai": "^4.2.7",
     "@types/express": "^4.17.2",
+    "@types/mocha": "^5.2.7",
     "@types/mongodb": "^3.3.13",
     "@types/node": "^12.12.21",
     "bcryptjs": "^2.4.3",
+    "chai": "^4.2.0",
     "connect-flash": "^0.1.1",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
     "express-session": "^1.17.0",
+    "mocha": "^6.2.2",
     "mongodb": "^3.4.1",
     "nodemon": "^2.0.2",
     "passport": "^0.4.1",
